--- a/css/styles.css
+++ b/css/styles.css
@@ -385,6 +385,7 @@ background-color: var(--main-text-color);
     font-size: 20px;
     line-height: 24px;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .card-profit {
     color:var(--second-text-color);
@@ -420,4 +421,11 @@ background-color: var(--main-text-color);
 }
 .captures-li {
     width: calc((100% - 48px) / 3);
+}
+.name-captures {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+
+
 }
